--- a/apps/DoctorApp/common/pages/Form[Conflict].html
+++ b/apps/DoctorApp/common/pages/Form[Conflict].html
@@ -10,12 +10,11 @@
 	<script src="js/ui/jquery.ui.datepicker.js"></script>
 	<script type="text/javascript" src="js/form.js"></script>
 	<script>
-$(function() {
+	$(function() {
 		$("#datepicker" ).datepicker();
 	});
 	var time;
 	var sex1;
-	var dt;
 	function time1()
 	{
 	    time=document.getElementById('time').options[document.getElementById('time').selectedIndex].value;
@@ -26,31 +25,20 @@ $(function() {
 	 sex1=sex;
 	 
 	}
-	function date1()
+	function getname()
 	{
-	var fromdate=new Date(document.getElementById("datepicker").value);
-	 var dd = fromdate.getDate();
-     var mm = fromdate.getMonth()+1;
-     var yyyy = fromdate.getFullYear();
-     if(dd < 10)
-        {
-            dd = '0'+ dd;
-        }
-        if(mm < 10)
-        {
-            mm = '0' + mm;
-        }
-     dt=yyyy+'-'+mm+'-'+dd;
-	}
-	function resetfun()
-	{
-	 document.getElementById('register').reset();         
+	 var name=document.getElementById("name").value;
+	 var phone=document.getElementById("phone").value;
+	 var age=document.getElementById("age").value;
+	
+	 var datepicker=document.getElementById("datepicker").value;
+	 var email=document.getElementById("email").value;
+	 var desp=document.getElementById("desp").value;          
 	}
 	
 	</script>
 </head>
 <body>
-<form id="register">
 <table>
 <tr>
 <td><label>Name</label> </td>
@@ -94,8 +82,6 @@ $(function() {
 		</td></tr>
 	</table>
 	
-	<input type="button" value="SUBMIT" onClick="insertPatient()"/>
-	<input type="button" value="Reset" onClick="resetfun()"/>
-	</form>
+	<input type="button" value="SUBMIT" onClick="getname()"/>
 </body>
 </html>
